# My-Learning-Journey

Challenge-TwoQueue/src/: main.cpp
Challenges-Multi-Task Data Logger/src/: main.cpp
ESP-IDF/01-idf-components-test/html/: doxygen_crawl.html  md__r_e_a_d_m_e.html  navtreedata.js  pages.html
ESP-IDF/01-idf-components-test/latex/: md__r_e_a_d_m_e.tex
ESP-IDF/01-idf-components-test/main/: main.c
ESP-IDF/06-rtos-get-set-priority/main/: main.c
ESP-IDF/07-rtos-software-timer/: CMakeLists.txt
ESP-IDF/08-rtos-task-watchdog/: CMakeLists.txt
ESP-IDF/08-rtos-task-watchdog/main/: main.c
ESP-IDF/11-basic-gpio/main/: main.c
ESP-IDF/12-gpio-uart/: CMakeLists.txt
ESP-IDF/12-gpio-uart/main/: main.c
ESP-IDF/basic-gpio/: CMakeLists.txt
ESP-IDF/practice-project/: BUILD_FIXES_APPLIED.md  BUILD_INSTRUCTIONS.md  BUILD_ISSUES_RESOLUTION.md  CMakeLists.txt  COMPILATION_FIXES.md  COMPILATION_STATUS.md  COMPONENTS_SUMMARY.md  DAY3-4_BUTTON_TEST_GUIDE.md  DHT22_BUILD_TEST_GUIDE.md  DHT22_INTEGRATION_GUIDE.md  FINAL_INTEGRATION_GUIDE.md  Kconfig.projbuild.backup  Kconfig.simple  LEARNING_ROADMAP.md  MENUCONFIG_TROUBLESHOOTING_GUIDE.md  MPU6050_INTEGRATION_GUIDE.md  MULTI_SENSOR_INTEGRATION_GUIDE.md  OFFLINE_READY_INTEGRATION_GUIDE.md  QUICK_FIX_GUIDE.md  README.md  SD_CARD_INTEGRATION_GUIDE.md  SYSTEM_CONFIG_USAGE_GUIDE.md  sdkconfig.defaults
ESP-IDF/practice-project/components/button_controller/: CMakeLists.txt  button_controller.c
ESP-IDF/practice-project/components/button_controller/include/: button_controller.h
ESP-IDF/practice-project/components/led_controller/: CMakeLists.txt  led_controller.c
ESP-IDF/practice-project/components/led_controller/include/: led_controller.h
ESP-IDF/practice-project/components/mpu6050_sensor/: CMakeLists.txt  mpu6050_sensor.c
ESP-IDF/practice-project/components/mpu6050_sensor/include/: mpu6050_sensor.h
ESP-IDF/practice-project/components/mqtt_client/: CMakeLists.txt  mqtt_client.c  mqtt_client.c.bak  mqtt_client.c.tmp
ESP-IDF/practice-project/components/mqtt_client/include/: mqtt_client.h  mqtt_manager.h
ESP-IDF/practice-project/components/ota_update/: CMakeLists.txt  ota_update.c
ESP-IDF/practice-project/components/ota_update/include/: ota_update.h
ESP-IDF/practice-project/components/storage_manager/: CMakeLists.txt  sd_card_storage.c
ESP-IDF/practice-project/components/storage_manager/include/: sd_card_storage.h
ESP-IDF/practice-project/components/system_config/: CMakeLists.txt  system_config.c
ESP-IDF/practice-project/components/system_config/include/: system_config.h
ESP-IDF/practice-project/components/wifi_manager/: CMakeLists.txt  wifi_manager.c
ESP-IDF/practice-project/components/wifi_manager/include/: wifi_manager.h
ESP-IDF/practice-project/main/: CMakeLists.txt  Kconfig.projbuild  main.c
ESP-IDF/rtos-delete-task/: CMakeLists.txt
ESP-IDF/rtos-delete-task/main/: main.c
ESP-IDF/rtos-get-set-priority/: CMakeLists.txt
ESP-IDF/rtos-passing-parameters/: CMakeLists.txt
ESP-IDF/rtos-passing-parameters/main/: main.c
ESP-IDF/rtos-software-timer/main/: main.c
ESP-IDF/rtos-task-resume-suspend/: CMakeLists.txt
ESP-IDF/rtos-task-resume-suspend/main/: main.c
ESP-IDF/rtos-task-watchdog/: temp
ESP-IDF/rtos_delete_self/: CMakeLists.txt
ESP-IDF/rtos_delete_self/main/: main.c
ESP-IDF/smart_logger/: CMakeLists.txt  partitions.csv
ESP-IDF/smart_logger/main/: CMakeLists.txt  smart_logger.c  smart_logger.h
ESP-IDF/spiffs/: sdkconfig
ESP-IDF/uart_async_rxtxtasks/: sdkconfig
ESP-IDF/uart_async_rxtxtasks/main/: uart_async_rxtxtasks_main.c
ESP-IDF/uart_print/: sdkconfig
Interrupt/main/: main.c
PlatformIO/: README.md
PlatformIO/00-Basic_Task_Create/src/: main.cpp
PlatformIO/01-Blink-Serial-RTOS/src/: main.cpp
PlatformIO/02-Queues-Inter-Task-Communication/src/: main.cpp
PlatformIO/03-Memory/src/: main.cpp
PlatformIO/Interrupt/: README.md
PlatformIO/esp32_firmware/src/: config.h  main.cpp
RTD with Telegram/: platformio.ini
RTD with Telegram/include/: SensorManager.h
RTD with Telegram/src/: SensorManager.cpp  main.cpp
TwoTaskChallengeNMemory/src/: main.cpp
esp32_firmware/: platformio.ini
esp32_firmware/data/: index.html
esp32_firmware/src/modules/: gpio.h
push_btn_as_switch/: push_btn_as_switch.ino  readme.txt
(+47 files in other folders)
